<resources>
    <string name="app_name">Medminder</string>
    <string name="medminder">MEDMINDER</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="pharmacies">Pharmacies</string>
    <string name="appointments">Appointments</string>
    <string name="doctors">Doctors</string>
    <string name="treatments">Treatments</string>
    <string name="add_measurement">Add Measurement</string>
    <string name="add_medicine">Add Medicine</string>
    <string name="title">Your Label Goes Here</string>
    <string name="todo">TODO</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="google_maps_api">AIzaSyDuxj6VtjBG75yPq4N3Qu8jv4oEhs-KABw</string>

    <string-array name="medicine_type_array">
        <item>Medicine Type</item>
        <item>Capsule</item>
        <item>Liquid</item>
        <item>Tablet</item>
    </string-array>

    <string-array name="measurement_type_array">
        <item>Mesaurement Type</item>
        <item>Blood Pressure</item>
        <item>Blood Sugar</item>
        <item>Tablet</item>
    </string-array>

    <string-array name="measurement_unit_array">
        <item>Unit</item>
        <item>unit 1</item>
        <item>unit 2</item>
        <item>unit 2</item>
    </string-array>
    <string-array name="interval_array">
        <item>Interval</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>9 hours</item>
    </string-array>

    <string-array name="instruction_array">
        <item>Instructions</item>
        <item>Do it</item>
        <item>Do not do it</item>
    </string-array>

</resources>